<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DrivingTrends</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">DRIVING TRENDS</string>
    <string name="subtitle">TIME BASED VIEW </string>
    <string name="total_amount">Total amount spent this month</string>
    <string name="change_last_month">Change  since last month</string>
    <string name="btn_mpg_text">MPG</string>
    <string name="btn_score_text">Score</string>
    <string name="btn_fuel_text">Fuel</string>
    <string name="btn_distance_text">Distance</string>
    <string name="btn_week_text">Week</string>
    <string name="btn_Month_text">Month</string>
    <string name="btn_Year_text">Year</string>
    <string name="amount_symbol">$</string>

</resources>
