<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/informationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/general_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txt_totalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_totalAmount"
                android:layout_toRightOf="@+id/pump_icon"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="@string/amount_symbol" />

            <ImageView
                android:id="@+id/pump_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_totalAmount"
                 android:src="@drawable/pump" />

        </RelativeLayout>

          <RelativeLayout
            android:id="@+id/general_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_change_last"
                android:text="TextView" />

            <TextView
                android:id="@+id/txt_change_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_last_month" />
        </RelativeLayout>
        
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/groupby_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/informationLayout"
        android:background="@drawable/tab_border" >

        <Button
            android:id="@+id/btn_Week"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@drawable/new_style_button"
            android:text="@string/btn_week_text" />

        <Button
            android:id="@+id/btn_Month"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@drawable/new_style_button"
            android:text="@string/btn_Month_text" />

        <Button
            android:id="@+id/btn_Year"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@drawable/new_style_button"
            android:text="@string/btn_Year_text" />
    </LinearLayout>

</RelativeLayout>