<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/header_border" >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/margin_small"
            android:paddingTop="@dimen/margin_small"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/txt_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_title"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/margin_small"
            android:text="@string/subtitle"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_size" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_revert" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/options_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/header_title"
        android:background="@drawable/tab_border" >

        <Button
            android:id="@+id/btn_score"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@drawable/new_style_button"
            android:text="@string/btn_score_text" />

        <Button
            android:id="@+id/btn_MPG"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@drawable/new_style_button"
            android:text="@string/btn_mpg_text" />

        <Button
            android:id="@+id/btn_fuel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@drawable/new_style_button"
            android:text="@string/btn_fuel_text" />

        <Button
            android:id="@+id/btn_distance"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@drawable/new_style_button"
            android:text="@string/btn_distance_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options_tab" >

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>